--- a/MapReduceTryouts/.project
+++ b/MapReduceTryouts/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PrabhuMoorthy</name>
+	<name>MapReduceTryouts</name>
 	<comment></comment>
 	<projects>
 	</projects>
